syntax = "proto3";

package protobuf.kotlin.generator;

option java_package = "com.google.protobuf.kotlin.generator";
option java_multiple_files = true;

enum NestedEnum { FOO = 0; }

message MultipleFilesMessageA {}

message MultipleFilesMessageB {}
